# KSJ-ClCaffe-Dev

./: .gitignore  CMakeLists.txt
include/: .gitignore
include/camera/: video_capture.h
include/camera/KSJ_inc/: KSJApi.h  KSJApiBase.h
include/cnn_multi_tracker/: cnn_multi_tracker.h
include/detector/: detector.h  intel_detector.hpp  ssd_net.h
include/game/: logic.h  object_info.h
include/utils/: CBase64Coder.h  http_connect.h  singleton.h  util.h
src/: CMakeLists.txt  CMakeLists.txt.bak  main.cpp
src/camera/: video_capture.cpp
src/cnn_multi_tracker/: cnn_multi_tracker.cpp
src/detector/: detector.cpp  intel_detector.cpp  kernels.cpp  ssd_net.cpp
src/game/: logic.cpp  object_info.cpp
src/utils/: CBase64Coder.cpp  Stopwatch.cpp  http_connect.cpp  util.cpp
